# wipeout-rewrite

./: .gitignore  Meson.md  meson.build  meson_options.txt  mips-allegrex-psp  pkg_psp.sh  psp.md  sh4-dreamcast-kos
src/: .clang-format  mem.c  mem.h  platform.h  platform_dc.c  platform_psp.c  platform_sdl.c  platform_sokol.c  psp_audio_stack.c  psp_audio_stack.h  psp_texture_manager.c  psp_texture_manager.h  render.h  render_gl.c  render_gl_legacy.c  render_gl_legacy_types.h  render_gl_types.h  render_gu.c  render_gu_types.h  system.c  system.h  types.c  types.h  types_dreamcast.c  types_dreamcast.h  types_generic.h  types_psp.h  utils.c  utils.h
src/wipeout/: camera.c  droid.c  game.c  ingame_menus.c  object.c  object.h  particle.c  scene.c  sfx.c  ship.c  ship_ai.c  ship_player.c  track.c  weapon.c
